# simple-insta

./: .gitignore  README.md  frontend.py  pyproject.toml  test_register.py
app/: db.py  images.py  main.py  schemas.py  users.py
app/routers/: comments.py  posts.py
